--- a/src/main/resources/templates/categorie/writer.html
+++ b/src/main/resources/templates/categorie/writer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/project02.css">
+    <link rel="stylesheet" th:href="@{/css/categorie/writer.css}">
 </head>
 <body>
     <div class="web">
@@ -23,9 +23,9 @@
                     <div class="boder">
                      <div class="sub-inner">
                         <div class="item">
-                            <button type="button" class="dropdown">
-                                도슨트북 모아보기
-                            </button>
+                            
+                                <h2 class="dropdown">#박상영</h2>
+                            
                         </div>
                      </div>   
                     </div>
@@ -33,7 +33,7 @@
                         <div class="subb-inner">
                             <div class="into">
                                 <p class="count">총 5권</p>
-                                <button type="button" class="tton">완독할 확률 높은 순</button>
+                                <button type="button" class="tton">인기 순</button>
                             </div>
                             <div class="gridd">
                                 <ul class="gridd-wrapper">
@@ -41,12 +41,12 @@
                                         <div class="millie-book">
                                             <a href="" type="book" class="book-image">
                                                 <div class="thumbnail">
-                                                    <p class="new-docentbooks">도슨트북</p>
+                                                    <p class="new-docentbooks">박상영</p>
                                                     <div class="thumbnail-inner">
                                                         <div class="book-picture">
                                                             <picture>
                                                                 <source type="image/webp">
-                                                                <img src="https://cover.millie.co.kr/service/cover/179561364/59ede77dd98f4da8bbc057bd8282ad17.jpg?w=200&q=80" alt=" 도서 썸네일">
+                                                                <img src="https://cover.millie.co.kr/service/cover/179573971/66dd652c831643309790665e2f1403bd.jpg?w=200&q=80" alt=" 도서 썸네일">
                                                             </picture>
                                                         </div>
                                                     </div>
@@ -55,13 +55,13 @@
                                             <a href="" type="book" class="book-data">
                                                 <div class="meta">
                                                     <p class="new-docentbook">
-                                                        <p class="title">위대한 개츠비</p>
-                                                        <p class="author">F.스콧피츠제럴드 원작</p>
+                                                        <p class="title">믿음에 대하여</p>
+                                                        <p class="author">박상영</p>
                                                     </p>
                                                     <p class="reading">
-                                                        83% 
+                                                        73% 
                                                         <span class="line">|</span>
-                                                         12분
+                                                         203분
                                                     </p>
                                                 </div>
                                             </a>
@@ -71,12 +71,12 @@
                                         <div class="millie-book">
                                             <a href="" type="book" class="book-image">
                                                 <div class="thumbnail">
-                                                    <p class="new-docentbooks">도슨트북</p>
+                                                    <p class="new-docentbooks">박상영</p>
                                                     <div class="thumbnail-inner">
                                                         <div class="book-picture">
                                                             <picture>
                                                                 <source type="image/webp">
-                                                                <img src="https://cover.millie.co.kr/service/cover/179594031/659f7ed6d9e04d088f3c28a657223891.jpg?w=200&q=80" alt=" 도서 썸네일">
+                                                                <img src="https://cover.millie.co.kr/service/cover/179553335/7845f50f1e544f9b90744d53dbbcdd2b.jpg?w=200&q=80" alt=" 도서 썸네일">
                                                             </picture>
                                                         </div>
                                                     </div>
@@ -85,13 +85,13 @@
                                             <a href="" type="book" class="book-data">
                                                 <div class="meta">
                                                     <p class="new-docentbook">
-                                                        <p class="title">달러구트 꿈 백화점</p>
-                                                        <p class="author">이미에 원작</p>
+                                                        <p class="title">일은 서울에서, 잠은 제주에서 </p>
+                                                        <p class="author">박상영</p>
                                                     </p>
                                                     <p class="reading">
-                                                        80% 
+                                                        81% 
                                                         <span class="line">|</span>
-                                                         9분
+                                                         21분
                                                     </p>
                                                 </div>
                                             </a>
@@ -101,12 +101,12 @@
                                         <div class="millie-book">
                                             <a href="" type="book" class="book-image">
                                                 <div class="thumbnail">
-                                                    <p class="new-docentbooks">도슨트북</p>
+                                                    <p class="new-docentbooks">박상영</p>
                                                     <div class="thumbnail-inner">
                                                         <div class="book-picture">
                                                             <picture>
                                                                 <source type="image/webp">
-                                                                <img src="https://cover.millie.co.kr/service/cover/179628819/69b73b6a172c4a558827a675ec5925e2.jpg?w=200&q=80" alt=" 도서 썸네일">
+                                                                <img src="https://cover.millie.co.kr/service/cover/179558639/47e9908fe31b4a2d8f59f8d3b7ed5947.jpg?w=200&q=80" alt=" 도서 썸네일">
                                                             </picture>
                                                         </div>
                                                     </div>
@@ -115,13 +115,13 @@
                                             <a href="" type="book" class="book-data">
                                                 <div class="meta">
                                                     <p class="new-docentbook">
-                                                        <p class="title">데일 카네기 인간관계론</p>
-                                                        <p class="author">데일카네기 지음, 임상훈 옮김</p>
+                                                        <p class="title">오늘 밤은 굶고 자야지</p>
+                                                        <p class="author">박상영</p>
                                                     </p>
                                                     <p class="reading">
-                                                        59% 
+                                                        75% 
                                                         <span class="line">|</span>
-                                                         8분
+                                                         154분
                                                     </p>
                                                 </div>
                                             </a>
@@ -131,12 +131,12 @@
                                         <div class="millie-book">
                                             <a href="" type="book" class="book-image">
                                                 <div class="thumbnail">
-                                                    <p class="new-docentbooks">도슨트북</p>
+                                                    <p class="new-docentbooks">박상영</p>
                                                     <div class="thumbnail-inner">
                                                         <div class="book-picture">
                                                             <picture>
                                                                 <source type="image/webp">
-                                                                <img src="https://cover.millie.co.kr/service/cover/179615660/6a5c1d2f31164aaba22fb28c31dec6d4.jpg?w=200&q=80" alt=" 도서 썸네일">
+                                                                <img src="https://cover.millie.co.kr/service/cover/179593527/b2132e0c11d24f70a3d5981aaba3974d.jpg?w=200&q=80" alt=" 도서 썸네일">
                                                             </picture>
                                                         </div>
                                                     </div>
@@ -145,13 +145,13 @@
                                             <a href="" type="book" class="book-data">
                                                 <div class="meta">
                                                     <p class="new-docentbook">
-                                                        <p class="title">역행자 : 확장판</p>
-                                                        <p class="author">자청 원작</p>
+                                                        <p class="title">억지로 쉼표 찍기 1화</p>
+                                                        <p class="author">박상영</p>
                                                     </p>
                                                     <p class="reading">
-                                                        44% 
+                                                        82% 
                                                         <span class="line">|</span>
-                                                         8분
+                                                         11분
                                                     </p>
                                                 </div>
                                             </a>
@@ -161,12 +161,12 @@
                                         <div class="millie-book">
                                             <a href="" type="book" class="book-image">
                                                 <div class="thumbnail">
-                                                    <p class="new-docentbooks">도슨트북</p>
+                                                    <p class="new-docentbooks">박상영</p>
                                                     <div class="thumbnail-inner">
                                                         <div class="book-picture">
                                                             <picture>
                                                                 <source type="image/webp">
-                                                                <img src="https://cover.millie.co.kr/service/cover/179599723/103e5936e3b540e6b8ab759ddfb1c3ba.jpg?w=200&q=80" alt=" 도서 썸네일">
+                                                                <img src="https://cover.millie.co.kr/service/cover/179620409/1d0c02959e49428a8ee2efe587653268.jpg?w=200&q=80" alt=" 도서 썸네일">
                                                             </picture>
                                                         </div>
                                                     </div>
@@ -175,13 +175,13 @@
                                             <a href="" type="book" class="book-data">
                                                 <div class="meta">
                                                     <p class="new-docentbook">
-                                                        <p class="title">모든 삶은 흐른다</p>
-                                                        <p class="author">로랑스 드빌레르 원작 </p>
+                                                        <p class="title">일은 서울에서, 잠은 제주에서 </p>
+                                                        <p class="author">박상영</p>
                                                     </p>
                                                     <p class="reading">
-                                                        40% 
+                                                        38% 
                                                         <span class="line">|</span>
-                                                         24분
+                                                         25분
                                                     </p>
                                                 </div>
                                             </a>
